chore: add Maven Wrapper and project license. Add tests